--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,11 @@
   "action": {
       "default_popup": "index.html",
       "default_title": "CSCE 432"
-  }
+  },
+  "content_scripts": [
+    {
+      "css": [ "newFont.css" ],
+      "matches": [ "https://*/*" ]
+    }
+  ]
 }
